# ChatBot

./: Cargo.toml  README.md  install.sh
examples/: bot.rs
src/: chat_api.rs  chatapi.rs  lib.rs  main.rs  model.rs  roles.rs  url.rs
