[package]
name = "chat_toy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "=0.11.14", features = ["json"] }
tokio = { version = "=1.25.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "process"] }
lazy_static = { version = "=1.4.0" }
json = "=0.12.4"
serde_json = { version = "=1.0.93" }
crossterm = { version = "=0.23.2" }
async-openai = { git = "https://github.com/64bit/async-openai.git", branch = "main" }

